--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -77,7 +77,7 @@ p{
 }
 
 .main-banner{
-    background-image: url(./src/img/banner.jpg);
+    background-image: url(../img/banner.jpg);
     background-size: cover;
     background-position: center;
     padding: 13rem 0;
